--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600,700,800,900" rel="stylesheet">
      <link rel="stylesheet" href="style.css" type="text/css" />
      <link rel="stylesheet" href="nav.css" type="text/css" />
+     <link rel="stylesheet" href="buttons.css" type="text/css" />
      <title>Trick-C | First Lady of Slovenian Techno</title>
 </head>
 
@@ -16,7 +17,7 @@
      <!-- Header -->
      <header class="header">
           <div id="logo">
-               <a href="index.html"><img src="images/logo-white.png" alt="Trick-C"></a>
+               <a href="index.html"><img src="images/logo-white.png" alt="Trick-C"><h1 class="sr-only">Trick-C</h1></a>
           </div>
           <nav class="navbar navbar-default">
                <div class="container-fluid">
@@ -44,8 +45,85 @@
      </header>
 
      <main class="container-fluid main-home-container">
-
      </main>
+
+     <section class="container-fluid section-home-container">
+          <div class="row next-event jumbotron">
+               <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+                    <p>NEXT EVENT: 9.12.2017 @ Maribor, Slovenia</p>
+               </div>
+          </div>
+          <div class="row latest-mix latest-releases">
+               <div class="col-xs-12 col-md-6 col-md-push-6 col-lg-4 col-lg-push-8">
+                    <h2>LATEST MIX:</h2>
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5iM8E2B0yIo?rel=0"></iframe>
+                    </div>
+               </div>
+
+               <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4">
+                    <h2>LATEST RELEASES:</h2>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release1.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>The Remixes, Vol. 4</h3>
+                              <p>Trick-C, Various Artists</p>
+                              <p><i>Shout Records</i></p>
+                              <p><a href="https://www.beatport.com/release/the-remixes-vol-4/2058257" target="_blank" class="btn btn-default btn-red" role="button">Listen / Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release2.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Subspace</h3>
+                              <p>Trick-C, A-Brothers, Gabeen</p>
+                              <p><i>Shout Records</i></p>
+                              <p><a href="https://www.beatport.com/release/subspace/1931276" target="_blank" class="btn btn-default btn-red" role="button">Listen / Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release3.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Lightness</h3>
+                              <p>Trick-C, Various Artists</p>
+                              <p><i>Different Is Different Records</i></p>
+                              <p><a href="https://www.beatport.com/release/lightness/1937030" target="_blank" class="btn btn-red" role="button">Listen / Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                      <div class="boxes-releases">
+                         <img src="images/releases/release4.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Ask For Treatment EP</h3>
+                              <p>Trick-C, Veztax</p>
+                              <p><i>Vezotonik Records</i></p>
+                              <p><a href="https://www.beatport.com/release/ask-for-treatment-ep/1667359" target="_blank" class="btn btn-default btn-red" role="button">Listen / Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release5.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Angular</h3>
+                              <p>Trick-C</p>
+                              <p><i>Different Is Different Records</i></p>
+                              <p><a href="https://www.beatport.com/release/angular/1612337" target="_blank" class="btn btn-default btn-red" role="button">Listen / Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release6.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Female:pressure</h3>
+                              <p>Trick-C, Various Artists</p>
+                              <p><i>Different Is Different Records</i></p>
+                              <p><a href="https://www.beatport.com/release/female-pressure/1577592" target="_blank" class="btn btn-red" role="button">Listen / Buy on Beatport</a></p>
+                         </div>
+                    </div>
+               </div>
+          </div>
+
+     </section>
+
+
+
 
      <!-- Modal -->
      <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -63,11 +141,12 @@
                                    <p class="help-block">We'll never share your email with anyone</p>
                               </div>
                               <div class="form-group">
-
-                                   <input type="radio" id="book-event" name="message-option">
                                    <label for="book-event">Book Event</label>
-                                   <input type="radio" id="get-events" name="message-option">
+                                   <input type="radio" id="book-event" name="message-option">
                                    <label for="get-events">Receive Events Info</label>
+                                   <input type="radio" id="get-events" name="message-option">
+                                   <label for="m-other">Other</label>
+                                   <input type="radio" id="m-other" name="message-option">
                                    <textarea rows="5" name="message" class="form-control" id="message" placeholder="Message"></textarea>
                               </div>
                               <button type="submit" class="btn btn-success">Send</button>
