--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
           </nav>
      </header>
 
+     <!-- Main Image Home Page -->
+
      <main class="container-fluid main-home-container">
+          <div class="cta-container">
+               <p>Don't want to miss the next event? Be the first to know!</p>
+               <input type="email" id="email" placeholder="   Email" required>
+               <input type="submit" value="Get Info">
+          </div>
+
      </main>
 
+
+
+
+
+     <!-- Content Home Page -->
      <section class="container-fluid section-home-container">
           <div class="row next-event jumbotron">
                <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
@@ -90,7 +103,7 @@
                               <p><a href="https://www.beatport.com/release/lightness/1937030" target="_blank" class="btn btn-red" role="button">Listen / Buy on Beatport</a></p>
                          </div>
                     </div>
-                      <div class="boxes-releases">
+                    <div class="boxes-releases">
                          <img src="images/releases/release4.jpg" class="img-circle">
                          <div class="caption">
                               <h3>Ask For Treatment EP</h3>
@@ -123,6 +136,16 @@
      </section>
 
 
+     <!-- Footer -->
+     <footer class="footer container-fluid">
+          <div class="logo-footer">
+               <a href="index.html"><img src="images/logo-white.png" alt="Trick-C"><h1 class="sr-only">Trick-C</h1></a>
+          </div>
+          <div class="signature"><i>Tjasa Jan | 11/2017</i></div>
+          <div>
+               <button class="btn btn-default navbar-btn"><a data-toggle="modal" data-target="#contactModal">Contact</a></button>
+          </div>
+     </footer>
 
 
      <!-- Modal -->
@@ -155,6 +178,7 @@
                </div>
           </div>
      </div>
+
 
      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
