--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                               <li><a href="projects.html">PROJECTS</a></li>
                               <li><a href="about.html">ABOUT</a></li>
                          </ul>
-                         <span><button class="btn btn-default navbar-btn hidden-xs"><a data-toggle="modal" data-target="#contactModal">Contact</a></button></span>
+                         <span><button class="btn btn-default navbar-btn btn-black hidden-xs"><a data-toggle="modal" data-target="#contactModal">Contact</a></button></span>
                     </div>
                </div>
           </nav>
@@ -144,7 +144,7 @@
           </div>
           <div class="row back-to-top visible-xs">
                <div class="col-xs-12">
-                    <a href="#logo" class="btn navbar-btn">Back to Top</a>
+                    <a href="#logo" class="btn btn-black">Back to Top</a>
                </div>
           </div>
      </section>
@@ -152,12 +152,12 @@
 
      <!-- Footer -->
      <footer class="footer container-fluid">
-          <div class="logo-footer">
+          <div class="logo-footer hidden-xs">
                <a href="index.html"><img src="images/logo-white.png" alt="Trick-C"><h1 class="sr-only">Trick-C</h1></a>
           </div>
           <div class="signature"><i>tjasajan&nbsp; | &nbsp;11/2017</i></div>
           <div>
-               <button class="btn btn-default navbar-btn"><a data-toggle="modal" data-target="#contactModal">Contact</a></button>
+               <button class="btn btn-black"><a data-toggle="modal" data-target="#contactModal">Contact</a></button>
           </div>
      </footer>
 
