--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600,700,800,900" rel="stylesheet">
+     <link rel="stylesheet" href="media-controls.css" type="text/css" />
      <link rel="stylesheet" href="style.css" type="text/css" />
      <link rel="stylesheet" href="nav.css" type="text/css" />
      <link rel="stylesheet" href="buttons.css" type="text/css" />
@@ -70,7 +71,7 @@
           </div>
           <div class="section-home-container">
                <div class="row latest-mix latest-releases">
-                    <div class="col-xs-12 col-md-6 col-md-push-6 col-lg-4 col-lg-push-8  homepage-right-section">
+                    <div class="col-xs-12 col-md-6 col-md-push-6 col-lg-4 col-lg-push-8">
                          <h2>LATEST MIX:</h2>
                          <div class="embed-responsive embed-responsive-16by9">
                               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5iM8E2B0yIo?rel=0"></iframe>
@@ -86,7 +87,7 @@
                          </div>
                     </div>
 
-                    <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4 homepage-left-section">
+                    <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4">
                          <h2>LATEST RELEASES:</h2>
                          <div class="boxes-releases">
                               <img src="images/releases/release1.jpg" class="img-circle">
