--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600,700,800,900" rel="stylesheet">
+     <link rel="stylesheet" href="media-controls.css" type="text/css" />
      <link rel="stylesheet" href="style.css" type="text/css" />
      <link rel="stylesheet" href="nav.css" type="text/css" />
      <link rel="stylesheet" href="buttons.css" type="text/css" />
