--- a/releases.html
+++ b/releases.html
@@ -7,10 +7,10 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600,700,800,900" rel="stylesheet">
+     <link rel="stylesheet" href="media-controls.css" type="text/css" />
      <link rel="stylesheet" href="style.css" type="text/css" />
      <link rel="stylesheet" href="nav.css" type="text/css" />
      <link rel="stylesheet" href="buttons.css" type="text/css" />
-     <link rel="stylesheet" href="media-controls.css" type="text/css" />
      <title>Trick-C | First Lady of Slovenian Techno</title>
 </head>
 
@@ -61,21 +61,66 @@
                <h3>Samples</h3>
           </div>
 
+          <!-- Samples -->
           <div class="row releases-samples">
-               <div class="col-xs-12 col-md-6 col-md-push-6 col-lg-4 col-lg-push-8">
-                    <div class="sample-audio">
-                         <audio controls>
+               <div class="col-xs-12 col-md-5 col-md-push-7 col-lg-4 col-lg-push-8">
+
+                    <div class="row">
+                         <div class="col-sm-6">
+
+                              <div class="sample-audio">
+                                   <audio controls="controls" controlsList="nodownload" volume="20%">
                               <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
                          </audio>
-                         <div class="caption">
-                              <h3>Pulsar</h3>
-                              <p>Linear EPs</p>
-                              <p><i>Shout Records</i></p>
+                                   <div class="caption">
+                                        <h3>Pulsar (Linear EP)</h3>
+                                   </div>
+                              </div>
+                              <div class="sample-audio">
+                                   <audio controls="controls" controlsList="nodownload" volume="20%">
+                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
+                         </audio>
+                                   <div class="caption">
+                                        <h3>Pulsar (Linear EP)</h3>
+                                   </div>
+                              </div>
+                              <div class="sample-audio">
+                                   <audio controls="controls" controlsList="nodownload" volume="20%">
+                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
+                         </audio>
+                                   <div class="caption">
+                                        <h3>Pulsar (Linear EP)</h3>
+                                   </div>
+                              </div>
                          </div>
+
+                         <div class="clearfix visible-md visible-lg"></div>
+                         <div class="col-sm-6">
+                              <div class="sample-audio">
+                                   <audio controls="controls" controlsList="nodownload" volume="20%">
+                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
+                         </audio>
+                                   <div class="caption">
+                                        <h3>Pulsar (Linear EP)</h3>
+                                   </div>
+                              </div>
+                              <div class="sample-audio">
+                                   <audio controls="controls" controlsList="nodownload" volume="20%">
+                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
+                         </audio>
+                                   <div class="caption">
+                                        <h3>Pulsar (Linear EP)</h3>
+                                   </div>
+                              </div>
+                         </div>
+                         <div class="clearfix visible-md visible-lg"></div>
+
                     </div>
+
                </div>
 
-               <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4">
+               <!-- Releases -->
+               <div class="col-xs-12 col-md-7 col-md-pull-5 col-lg-8 col-lg-pull-4">
                     <div class="row page-sub-heading visible-xs visible-sm">
                          <h3>Releases</h3>
                     </div>
@@ -131,6 +176,24 @@
                               <p>Trick-C, Various Artists</p>
                               <p><i>Different Is Different Records</i></p>
                               <p><a href="https://www.beatport.com/release/female-pressure/1577592" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release7.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Linear EP</h3>
+                              <p>Trick-C</p>
+                              <p><i>Vezotonik Records</i></p>
+                              <p><a href="https://www.beatport.com/release/linear-ep/1219955" target="_blank" class="btn btn-default btn-red" role="button">Buy on Beatport</a></p>
+                         </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release8.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Top 20 Highlights</h3>
+                              <p>Trick-C, Various Artists</p>
+                              <p><i>Unaffected Records</i></p>
+                              <p><a href="https://www.beatport.com/release/top-20-highlights-from-2011-unaffected-records/1214522" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
                          </div>
                     </div>
                </div>
