updated releases and samples

--- a/releases.html
+++ b/releases.html
@@ -47,7 +47,7 @@
 
 
      <!-- Section Content Releases -->
-     <section class="container-fluid section-page-container">
+     <section class="container-fluid section-page-container-releases">
           <div class="row page-heading">
                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <h2 class="visible-xs visible-sm">Samples &amp; Releases</h2>
@@ -69,27 +69,30 @@
                          <div class="col-sm-6">
 
                               <div class="sample-audio">
-                                   <audio controls="controls" controlsList="nodownload" volume="20%">
-                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
-                         </audio>
-                                   <div class="caption">
-                                        <h3>Pulsar (Linear EP)</h3>
+                                   <audio controls="controls" controlsList="nodownload">
+                                        <source src="music/Subspace-Guinan.wav" type="audio/wav">Your browser does not support the audio element.
+                                   </audio>
+                                   <div class="caption-sample">
+                                        <h3>Guinan (Subspace)</h3>
+                                        <p>Trick-C Original Mix</p>
                                    </div>
                               </div>
                               <div class="sample-audio">
-                                   <audio controls="controls" controlsList="nodownload" volume="20%">
-                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
-                         </audio>
-                                   <div class="caption">
-                                        <h3>Pulsar (Linear EP)</h3>
+                                   <audio controls="controls" controlsList="nodownload">
+                                        <source src="music/Subspace-Sentient-A-Brothers-Rmx.wav" type="audio/wav">Your browser does not support the audio element.
+                                   </audio>
+                                   <div class="caption-sample">
+                                        <h3>Sentient (Subspace)</h3>
+                                        <p>A-Brothers Get Up Remix</p>
                                    </div>
                               </div>
                               <div class="sample-audio">
-                                   <audio controls="controls" controlsList="nodownload" volume="20%">
-                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
-                         </audio>
-                                   <div class="caption">
-                                        <h3>Pulsar (Linear EP)</h3>
+                                   <audio controls="controls" controlsList="nodownload">
+                                        <source src="music/Ask-For-Treatment-EP-Do-Not-Ask.wav" type="audio/wav">Your browser does not support the audio element.
+                                   </audio>
+                                   <div class="caption-sample">
+                                        <h3>Do Not Ask (Ask For Treatment EP)</h3>
+                                        <p>Trick-C &amp; Veztax Original Mix</p>
                                    </div>
                               </div>
                          </div>
@@ -97,24 +100,30 @@
                          <div class="clearfix visible-md visible-lg"></div>
                          <div class="col-sm-6">
                               <div class="sample-audio">
-                                   <audio controls="controls" controlsList="nodownload" volume="20%">
-                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
-                         </audio>
-                                   <div class="caption">
+                                   <audio controls="controls" controlsList="nodownload">
+                                        <source src="music/Linear-EP-Pulsar.wav" type="audio/wav">Your browser does not support the audio element.
+                                   </audio>
+                                   <div class="caption-sample">
                                         <h3>Pulsar (Linear EP)</h3>
+                                        <p>Trick-C Original Mix</p>
                                    </div>
                               </div>
                               <div class="sample-audio">
-                                   <audio controls="controls" controlsList="nodownload" volume="20%">
-                              <source src="music/linear-pulsar.wav" type="audio/wav">Your browser does not support the audio element.
-                         </audio>
-                                   <div class="caption">
-                                        <h3>Pulsar (Linear EP)</h3>
+                                   <audio controls="controls" controlsList="nodownload">
+                                        <source src="music/Linear-EP-Movements.wav" type="audio/wav">Your browser does not support the audio element.
+                                   </audio>
+                                   <div class="caption-sample">
+                                        <h3>Movements (Linear EP)</h3>
+                                        <p>Trick-C Original Mix</p>
                                    </div>
                               </div>
                          </div>
                          <div class="clearfix visible-md visible-lg"></div>
-
+                         
+                         <hr>
+                         <div class="btn btn-black btn-samples">
+                              <a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Listen More on Beatport</a>
+                         </div>
                     </div>
 
                </div>
