--- a/releases.html
+++ b/releases.html
@@ -139,7 +139,7 @@
                               <h3>The Remixes, Vol. 4</h3>
                               <p>Trick-C, Various Artists</p>
                               <p><i>Shout Records</i></p>
-                              <p><a href="https://www.beatport.com/release/the-remixes-vol-4/2058257" target="_blank" class="btn btn-default btn-red" role="button">Buy on Beatport</a></p>
+                              <p><a href="https://www.beatport.com/release/the-remixes-vol-4/2058257" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
                          </div>
                     </div>
                     <div class="boxes-releases">
@@ -148,7 +148,7 @@
                               <h3>Subspace</h3>
                               <p>Trick-C, A-Brothers, Gabeen</p>
                               <p><i>Shout Records</i></p>
-                              <p><a href="https://www.beatport.com/release/subspace/1931276" target="_blank" class="btn btn-default btn-red" role="button">Buy on Beatport</a></p>
+                              <p><a href="https://www.beatport.com/release/subspace/1931276" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
                          </div>
                     </div>
                     <div class="boxes-releases">
@@ -166,7 +166,7 @@
                               <h3>Ask For Treatment EP</h3>
                               <p>Trick-C, Veztax</p>
                               <p><i>Vezotonik Records</i></p>
-                              <p><a href="https://www.beatport.com/release/ask-for-treatment-ep/1667359" target="_blank" class="btn btn-default btn-red" role="button">Buy on Beatport</a></p>
+                              <p><a href="https://www.beatport.com/release/ask-for-treatment-ep/1667359" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
                          </div>
                     </div>
                     <div class="boxes-releases">
@@ -175,7 +175,7 @@
                               <h3>Angular</h3>
                               <p>Trick-C</p>
                               <p><i>Different Is Different Records</i></p>
-                              <p><a href="https://www.beatport.com/release/angular/1612337" target="_blank" class="btn btn-default btn-red" role="button">Buy on Beatport</a></p>
+                              <p><a href="https://www.beatport.com/release/angular/1612337" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
                          </div>
                     </div>
                     <div class="boxes-releases">
@@ -193,7 +193,7 @@
                               <h3>Linear EP</h3>
                               <p>Trick-C</p>
                               <p><i>Vezotonik Records</i></p>
-                              <p><a href="https://www.beatport.com/release/linear-ep/1219955" target="_blank" class="btn btn-default btn-red" role="button">Buy on Beatport</a></p>
+                              <p><a href="https://www.beatport.com/release/linear-ep/1219955" target="_blank" class="btn btn-red" role="button">Buy on Beatport</a></p>
                          </div>
                     </div>
                     <div class="boxes-releases">
